added base angular app, player view/controller

--- a/radio/webapp/public/index.html
+++ b/radio/webapp/public/index.html
@@ -1,1 +1,27 @@
-<p>Welcome to CoffeeHouse Radio!</p>
+<!DOCTYPE html>
+<html lang="en" ng-app="CoffeeHouseRadio">
+<head>
+  <meta charset="utf-8">
+  <title>CoffeeHouse Radio</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Angular and Plugins -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+
+
+</head>
+<body>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
+
+  <!-- Angular App -->
+  <script type="text/javascript" src="app.js"></script>
+
+  <!-- Media Player -->
+  <script trype="text/javascript" src="player/player.controller.js"></script>
+
+  <div ui-view></div>
+
+</body>
+</html>
