development work. Youtube apis are annoying..

--- a/radio/webapp/public/index.html
+++ b/radio/webapp/public/index.html
@@ -14,6 +14,9 @@
   <script src="http://192.168.33.10:4000/socket.io/socket.io.js"></script>
   <script src="js/angular-socket-io-master/socket.min.js"></script>
 
+  <!-- Youtube iframe API -->
+  <script src="https://www.youtube.com/iframe_api"></script>
+
 </head>
 <body>
 
