--- a/radio/webapp/public/player/view.html
+++ b/radio/webapp/public/player/view.html
@@ -1,2 +1,1 @@
-<p>Welcome to the Coffee House Media Player</p>
-<p>{{currentSong}}</p>
+<div id="youtube-player" ng-show="currentSong.type === 'youtube'"></div>
