--- a/radio/webapp/public/player/view.html
+++ b/radio/webapp/public/player/view.html
@@ -1,1 +1,1 @@
-<div id="youtube-player" ng-show="currentSong.type === 'youtube'"></div>
+<iframe id="sc-widget" width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/47565276&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
