ready to test on digital ocean

--- a/radio/webapp/public/index.html
+++ b/radio/webapp/public/index.html
@@ -23,6 +23,9 @@
   <!-- Media Player -->
   <script trype="text/javascript" src="player/controller.js"></script>
 
+  <!-- Media Service -->
+  <script type="text/javascript" src="services/media.service.js"></script>
+
   <div ui-view></div>
 
 </body>
